fix: fix button z-index, add closing pop-up by clicking on shadow area

--- a/pages/main/style.scss
+++ b/pages/main/style.scss
@@ -110,7 +110,7 @@ $font-color5: #FFFFFF;
   rgba(0, 0, 0, 1);
   @media screen and (max-width:1280px){
     position: relative;
-    z-index: 10;
+    z-index: 11;
     }
   @media screen and (max-width: 768px) {
     position: fixed;
